@@ -5,17 +5,22 @@ plugins {
 dependencies {
   implementation("com.google.errorprone:error_prone_core")
 
+  annotationProcessor("com.google.auto.service:auto-service")
+  compileOnly("com.google.auto.service:auto-service-annotations")
+
   testImplementation("com.google.errorprone:error_prone_test_helpers")
 }
 
-otelJava.moduleName.set("io.opentelemetry.javaagent.customchecks")
+otelJava {
+  minJavaVersionSupported.set(JavaVersion.VERSION_11)
+}
 
 // We cannot use "--release" javac option here because that will forbid exporting com.sun.tools package.
 // We also can't seem to use the toolchain without the "--release" option. So disable everything.
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_17
-  targetCompatibility = JavaVersion.VERSION_17
+  sourceCompatibility = JavaVersion.VERSION_11
+  targetCompatibility = JavaVersion.VERSION_11
   toolchain {
     languageVersion.set(null as JavaLanguageVersion?)
   }
@@ -31,23 +36,13 @@ tasks {
           "--add-exports",
           "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
           "--add-exports",
-          "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-          "--add-exports",
           "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
           "--add-exports",
           "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
           "--add-exports",
-          "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        ),
+          "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+        )
       )
-    }
-  }
-
-  // only test on java 17+
-  val testJavaVersion: String? by project
-  if (testJavaVersion != null && Integer.valueOf(testJavaVersion) < 17) {
-    test {
-      enabled = false
     }
   }
 }
@@ -63,11 +58,6 @@ tasks.withType<Test>().configureEach {
   jvmArgs("--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
   jvmArgs("--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
   jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
-}
-
-tasks.withType<Javadoc>().configureEach {
-  // using com.sun.tools.javac.api.JavacTrees breaks javadoc generation
-  enabled = false
 }
 
 // Our conventions apply this project as a dependency in the errorprone configuration, which would cause
